# documentation

./: .editorconfig  .gitconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  index.md  mkdocs.yml  pyproject.toml
.github/workflows/: checks.yml  deployment-to-gh-pages.yml
.run/: build.run.xml  start.run.xml  update.run.xml
docs/: authentication.md  csv-upload.md  index.md  organizations.md  report-templates.md  requesting-a-report.md  submitting-a-report.md
docs/REST API/: authentication.md  index.md  organizations.md
docs/UI/: csv-upload.md
docs/assets/css/: extra.css
docs/rest-api/: authentication.md  index.md  structure.md
docs/ui/: csv-upload.md
examples/: create_report.py  request_report.py
overrides/: main.html
