[tool.poetry]
name = "documentation"
version = "0.1.0"
description = "Documentation for the openESG API"
authors = ["openESG <info@openesg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
