[tool.poetry]
name = "documentation"
description = "Documentation for the openESG API"
authors = ["openESG <info@openesg.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.16"
pre-commit = "^3.6.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
