[project]
name = "documentation"
version = "0.0.0"
requires-python = "<4.0.0,>=3.12.0"
description = "Documentation for the openESG API"
authors = [
    {name = "openESG GmbH", email = "support@openesg.de"}
]
dependencies = [
	"mkdocs>=1.5.3",
	"mkdocs-material>=9.5.12",
	"pre-commit>=3.6.2",
	"mkdocs-git-revision-date-localized-plugin>=1.2.4"
]

[tool.uv]
package = false
